# scsimplex

./: .gitignore  README.md  pyproject.toml
analysis/benchmark_reports_all3/: benchmark_summary.md  refdata_multiplets.csv
analysis/celltreeviz/: .gitignore  README.md  pyproject.toml
analysis/celltreeviz/celltreeviz/: __init__.py  __main__.py  core.py
analysis/celltreeviz/dataex/: Z.npy  clades_stability.parquet
analysis/celltreeviz/examples/: basic.py
analysis/celltreeviz/tests/: test_core.py
analysis/scripts/: run_benchmark.py
analysis/scripts/refdata/: allSamplesAnnot.tsv  clusters_annot_k7.tsv
benchmark_reports_all3/: benchmark_summary.json  sample_metrics.csv
src/scsimplex/: __init__.py
src/scsimplex/pp/: __init__.py  _bias.py  _distance.py  _metacells.py  _transform.py
src/scsimplex/tl/: __init__.py  _classifier.py  _multiplets.py
tests/: conftest.py  test_bias.py  test_distance.py  test_tools.py  test_transform.py
