[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scsimplex"
version = "0.1.0"
description = "A scverse package for single-cell utility workflows based on compositional and multinomial geometry."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "anndata>=0.9.0",
    "numpy>=1.22.0",
    "scipy>=1.8.0",
    "dask[array]>=2022.0.0",
    "scikit-learn>=1.0.0",
    "pandas>=1.4.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.5.0", "pytest>=7.0.0"]
faiss = ["faiss-cpu"]

[tool.hatch.build.targets.wheel]
packages = ["src/scsimplex", "src/celltreeviz"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["error::FutureWarning", "error::DeprecationWarning"]
