[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "celltreeviz"
version = "0.1.0"
description = "Interactive web visualisation for cell hierarchy trees and aligned leaf heatmaps."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "plotly",
  "pyarrow",
  "PyYAML",
  "networkx",
]

[project.scripts]
celltreeviz = "celltreeviz.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["celltreeviz*"]
